--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 body {
     font-size: 25px;
     background-color: rgb(255, 255, 255);
+    background-image: url("/fundo-renal.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    color: rgb(209, 209, 209);
+    text-shadow: 0px 0px 5px black;
+}
+
+.title-loading {
+    background-color: rgba(44, 44, 44, 0.94);
+    padding: 30px 40px;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgb(0, 0, 0);
 }
